# pinnacolada

./: .gitignore  README.md  pyproject.toml
cookbook/: readme.md
cookbook/dummy_intro/: model.py  readme.md  x_squared.py  x_squared_with_boundary_condition.py
cookbook/intro_1d_constant_speed/: zzz.py  zzz2.py  zzz3.py
cookbook/intro_to_gradients/: part_1_leaf_that_require_grad.md
cookbook/projectile/: data.py  main_with_physics.py  models.py  physics.py  plotting.py
cookbook/rocket_with_linear_air_resistance/: data.py  main.py  models.py  physics.py  vis.py
intro_to_gradients/: part_1_leaves_and_gradients.md  part_2_closer_look_at_grad.md
messy_notes/: main.py  zzz.py
tools/: ultimate_cuda_check.py
