[tool.poetry]
name = "pinnacolada"
version = "0.1.0"
description = "PINNa Colada: Where Deep Learning Shakes up Physics"
authors = ["Maciej J Mikulski <mjmikulski@agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "~1.26.0"
plotly = "~5.17.0"
wandb = "^0.15.10"
tqdm = "^4.66.1"
kaleido = "0.2.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
